<resources>
    <string name="app_name">SmoothList</string>
    <string name="desc_app">Une application simple avec un design sobre pour crée vos tâches en toutes simplicité !</string>

    <string name="dialog_tuto_title">Création de tâche</string>
    <string name="dialog_tuto">Vous pouvez crée des tâches rapidement et facilement !</string>
    <string name="menu_tuto_title">Liste de tâches</string>
    <string name="menu_tuto">Toutes les tâches sont affichés ici. Pour supprimer une tâche, rester longuement appuyé sur celle que vous voulez supprimer, vous pourrez annuler l\'opération dans les secondes qui suivent !</string>
    <string name="edit_tuto_title">Modifier une tâche</string>
    <string name="edit_tuto">Vous pouvez modifier les informations de la tâche, changer l\'heure de rappel et modifier l\'image de représentation !</string>
    <string name="title">Titre</string>
    <string name="description">Description</string>
    <string name="cancel">Annuler</string>
    <string name="ok">OK</string>
    <string name="view">Voir</string>
    <string name="error_fields">Veuillez remplir les champs ci-dessus</string>
    <string name="error_date">Impossible d\'entrez une date inférieur à aujourd\'hui</string>
    <string name="delete_item_question">Voulez vous supprimer cette note ?</string>
    <string name="delete_item_title">Supprimer une note</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="done">Fait</string>
    <string name="date">Date</string>
    <string name="banner">Bannières</string>
    <string name="time">Heure</string>
    <string name="no_date">Aucune date</string>
    <string name="search">Rechercher</string>
    <string name="search_date">Par date</string>
    <string name="search_importance">Par importance</string>
    <string name="search_title">Par titre</string>
    <string name="cancel_delete">Suppression annulé</string>
    <string name="delete_note">Note supprimée</string>
    <string name="share">Partager</string>
    <string name="new_notif">Nouvel évènement</string>
    <string name="notif_todo">Ouvrez l\'application, vous avez quelque chose à faire !</string>
    <string name="finish_edit">Modification terminé</string>

    <string name="format_date">dd/MM/yyyy HH:mm</string>

    <string-array name="level_array">
        <item>Normal</item>
        <item>Important</item>
        <item>Très Important</item>
    </string-array>
    <string name="edit">Modifier</string>
    <string name="todo">À faire</string>
</resources>
