<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_clear"
        app:showAsAction="ifRoom"
        android:title="@string/search" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/search" />

    <item
        android:id="@+id/search_date"
        app:showAsAction="never"
        android:title="@string/search_date" />

    <item
        android:id="@+id/search_title"
        app:showAsAction="never"
        android:title="@string/search_title" />

    <item
        android:id="@+id/search_importance"
        app:showAsAction="never"
        android:title="@string/search_importance" />
</menu>