<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#E0ECF8"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/header_image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scaleType="centerCrop"
        android:background="@android:color/black"
        android:elevation="10dp"
        android:src="@drawable/banner_dialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_switch"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="Todo"
                android:textSize="20sp"
                android:gravity="end"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content" />

            <Switch
                android:id="@+id/switch_done"
                android:layout_width="match_parent"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/title" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spinner_level"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:entries="@array/level_array"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:gravity="top|start|left"
                android:layout_height="match_parent"
                android:hint="@string/description"
                android:lines="5"
                android:maxLines="5" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/date_picker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:hint="@string/date" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/time_picker"
                    android:layout_width="match_parent"
                    android:focusable="false"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/time" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/preview"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:background="#FAFAFA"/>

            <Button
                android:id="@+id/edit_finished"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finish_edit"
                android:textColor="@color/colorPrimary"
                style="@style/SelectableItemBackground"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>